--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "classnames": "^2.5.1",
+    "markdown-to-jsx": "^7.4.1",
     "normalize.css": "^8.0.1",
     "random-words": "^2.0.0",
     "react": "^18.2.0",
